2005-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config),
	(dvd_skip_behaviour), (bacon_video_widget_new),
	(bacon_video_widget_set_media_device),
	(bacon_video_widget_set_proprietary_plugins_path),
	(bacon_video_widget_set_connection_speed),
	(bacon_video_widget_get_connection_speed),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_set_video_device),
	(bacon_video_widget_set_audio_out_type):
	modify the config entries to follow the xine-lib 1.0 rename

2005-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c: (totem_session_restore):
	* src/totem.c: (on_eos_event): when restoring a playlist, or
	when rewinding to the start of a playlist (without repeat), set the
	video widget to pause to release the sound device (Closes: #163875)

2005-01-12  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/bacon-video-widget-gst.c:
	* src/totem-interface.c: (totem_interface_error_dialog),
	(totem_interface_error), (totem_interface_error_blocking),
	(totem_interface_load), (totem_interface_load_pixbuf),
	(totem_interface_get_full_path):
	* src/totem-interface.h:
	* src/totem-playlist.c: (totem_playlist_new):
	* src/totem-playlist.h:
	* src/totem-uri.h:
	* src/totem.c: (totem_action_error), (totem_action_error_and_exit),
	(on_open_location1_activate), (main):
	* src/totem.h: add interface helpers for glade files, and images,
	Add vim bits to the gst widget

2005-01-12  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_open_with_subtitle):
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_subtitled),
	(bacon_video_widget_open_with_subtitle):
	* src/bacon-video-widget.h:
	* src/totem-uri.c: (totem_uri_get_subtitle_uri):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_set_mrl_with_warning):
	do the automatic subtitle opening in the front-end, rather than
	in the backends

2005-01-11  Bastien Nocera  <hadess@hadess.net>
