@@ -1,3 +1,9 @@
+2005-01-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/totem-properties-main.c: (nautilus_module_initialize):
+	  Try to make popt parsing work so that this works with GStreamer
+	  backend as well.
+
 2005-01-13  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-xine.c: (setup_config),
